fix some qodana issues in ctqueryimpl